[package]
name = "netograph-rs"
version = "0.1.0"
authors = ["Maximilian Hils <git@maximilianhils.com>"]
edition = "2018"

[dependencies]
tonic = { version = "0.3", features = ["tls", "tls-roots"] }
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"

